objects/n2de__User_activity_log__c.object
<CustomObject>
    <description>Tracks user&apos;s log in/log out activity and reasons.</description>
    <fields>
        <fullName>n2de__Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Log in</fullName>
                    <default>true</default>
                    <label>Log in</label>
                </value>
                <value>
                    <fullName>Log out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>n2de__Action_date__c</fullName>
        <label>Action date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>n2de__Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>End of day</fullName>
                    <default>true</default>
                    <label>End of day</label>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Out of Office</fullName>
                </value>
                <value>
                    <fullName>Busy</fullName>
                </value>
                <value>
                    <fullName>Break</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>n2de__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Users1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User activity log</label>
    <listViews>
        <fullName>Nolan_Daigle_User_activity_log</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User activity logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>